[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopPanel" type="PanelContainer" parent="."]
anchors_preset = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 320.0
offset_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TopBar" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2

[node name="LeftInfo" type="VBoxContainer" parent="TopPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SeasonLabel" type="Label" parent="TopPanel/TopBar/LeftInfo"]
layout_mode = 2
text = "Spring  Year 1  Day 1"

[node name="WeatherLabel" type="Label" parent="TopPanel/TopBar/LeftInfo"]
layout_mode = 2
text = "Sunny"

[node name="Spacer" type="Control" parent="TopPanel/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="RightInfo" type="VBoxContainer" parent="TopPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MoneyLabel" type="Label" parent="TopPanel/TopBar/RightInfo"]
layout_mode = 2
horizontal_alignment = 2
text = "$0"

[node name="LocationLabel" type="Label" parent="TopPanel/TopBar/RightInfo"]
layout_mode = 2
horizontal_alignment = 2
text = "Overworld"

[node name="WildZoneLegend" type="Label" parent="."]
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 42.0
offset_right = 260.0
offset_bottom = 72.0
horizontal_alignment = 1
text = "Wild Munchies spawn in glowing colored grass patches."

[node name="GrassHintLabel" type="Label" parent="."]
visible = false
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_top = 76.0
offset_right = 220.0
offset_bottom = 106.0
horizontal_alignment = 1
text = "Wild Munch Zone: encounter possible."

[node name="GrassIndicator" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.231373, 0.184314, 0.184314, 0.28)
mouse_filter = 2

[node name="BattleTransition" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.231373, 0.184314, 0.184314, 1)
mouse_filter = 2
